# xf86-video-omap

./: .gitignore  NEWS  configure.ac
src/: Makefile.am  compat-xwayland.h  drmmode_display.c  omap_dri2.c  omap_driver.c  omap_driver.h  omap_exa.c  omap_exa.h  omap_exa_null.c
